--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -77,5 +77,5 @@ jobs:
       run: npm ls --depth=0 --dev && npm ls --depth=0 --prod
 
     - run: npm run build --if-present
-    - run: npm run basic
-    - run: npm run functions
+    - run: npm test
+    - run: npm run test_files
