--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,10 +54,10 @@ jobs:
         npm -v
         npmMajorVer=$(npm -v | cut -d. -f1)
         echo "major=$npmMajorVer" >> $GITHUB_OUTPUT
-    - name: Disable prettier on older Node.js (8.x, 10.x, 12.x)
+    - name: Disable prettier on older Node.js (8.x, 10.x, 12.x, 14.x, 16.x, 18.x)
       run: |
         sed -i '/"prettier": "prettier/d' package.json
-      if: contains(fromJson('["8.x", "10.x", "12.x"]'), matrix.node-version)    
+      if: contains(fromJson('["8.x", "10.x", "12.x"], "14.x", "16.x", "18.x"'), matrix.node-version)    
 
     - name: Install downgraded modules ${{ matrix.npm-i }}
       run: |
