--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,20 +22,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node-version: [8.x, 10.x, 12.x, 14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        include:
-          - node-version: 8.x
-            npm-i: "eslint@6.x eslint-config-airbnb-base@14.x eslint-config-prettier@6.x eslint-plugin-prettier@3.x fs-extra@8.x nyc@14.x tap@14.x chai@5.x colors@1.x compare-json-difference@0.x log4js-tagline@5.x mocha@10.x"
-
-          - node-version: 10.x
-            npm-i: "eslint@7.x fs-extra@9.x nyc@14.x tap@14.x chai@5.x colors@1.x compare-json-difference@0.x log4js-tagline@5.x mocha@10.x"
-
-          - node-version: 12.x
-            npm-i: "fs-extra@10.x nyc@14.x tap@14.x chai@5.x colors@1.x compare-json-difference@0.x log4js-tagline@5.x mocha@10.x"
-
-          - node-version: 14.x
-            npm-i: "nyc@14.x tap@14.x chai@5.x colors@1.x compare-json-difference@0.x log4js-tagline@5.x mocha@10.x"
 
     steps:
     - uses: actions/checkout@v3
@@ -54,10 +42,11 @@ jobs:
         npm -v
         npmMajorVer=$(npm -v | cut -d. -f1)
         echo "major=$npmMajorVer" >> $GITHUB_OUTPUT
-    - name: Disable prettier on older Node.js (8.x, 10.x)
+
+    - name: Disable prettier on older Node.js (8.x, 10.x, 12.x)
       run: |
         sed -i '/"prettier": "prettier/d' package.json
-      if: contains(fromJson('["8.x", "10.x"'), matrix.node-version)    
+      if: contains(fromJson('["8.x", "10.x", "12.x"]'), matrix.node-version)
 
     - name: Install downgraded modules ${{ matrix.npm-i }}
       run: |
@@ -77,5 +66,4 @@ jobs:
       run: npm ls --depth=0 --dev && npm ls --depth=0 --prod
 
     - run: npm run build --if-present
-    - run: npm test
     - run: npm run test_files
