--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -70,6 +70,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - run: npm run test_files
-    #- run: npm publish 
-    #  env:
-    #      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+    - run: npm publish 
+      env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
