--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,70 +6,33 @@ on:
       - Node.js CI
     types:
       - completed
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+      - run: npm ci
+      - run: npm test
 
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: https://registry.npmjs.org/
+          
+      - run: npm ci
+      - run: npm test
+      - run: npm run basic
+    # Publish to npm (append `--access public` for scoped packages)
 
-    - name: Configure npm
-      run: npm config set loglevel error
-
-    - name: Get npm version
-      id: npm-version
-      run: |
-        npm -v
-        npmMajorVer=$(npm -v | cut -d. -f1)
-        echo "major=$npmMajorVer" >> $GITHUB_OUTPUT
-    - name: Disable prettier on older Node.js (8.x, 10.x, 12.x)
-      run: |
-        sed -i '/"prettier": "prettier/d' package.json
-      if: contains(fromJson('["8.x", "10.x", "12.x"]'), matrix.node-version)    
-
-    - name: Install downgraded modules ${{ matrix.npm-i }}
-      run: |
-        npm install --save-dev ${{ matrix.npm-i }}
-        if [ ${{ steps.npm-version.outputs.major }} -le 5 ]; then
-          npm install
-        fi
-      if: matrix.npm-i != ''
-
-    - run: npm install
-      if: matrix.npm-i == '' && steps.npm-version.outputs.major <= 5
-
-    - run: npm ci
-      if: matrix.npm-i == '' && steps.npm-version.outputs.major > 5
-
-    - name: List dependencies
-      run: npm ls --depth=0 --dev && npm ls --depth=0 --prod
-
-    - run: npm run build --if-present
-    - run: npm test
-    - run: npm run test_files
-    #- run: npm publish 
-    #  env:
-    #      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+      - run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
