-v 3.0.32 yml test variables

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,6 +6,13 @@ on:
       - Node.js CI
     types:
       - completed
+  workflow_call:
+    inputs:
+      username:
+        description: 'A username passed from the caller workflow'
+        default: 'popolana'
+        required: false
+        type: string
 
 jobs:
   build:
