--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,16 +8,22 @@ on:
       - completed
 
 jobs:
-  CI:
+  build:
     runs-on: ubuntu-latest
-
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm test
 
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: set node-version
-        uses: actions/setup-node@v3
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           registry-url: 'https://registry.npmjs.org/'
           node-version-file: '.nvmrc'
