--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -38,10 +38,10 @@ jobs:
       - name: Build Banana
         run: npm run banana -- --build --env prod
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: banana
-          path: ./build/
+    #  - uses: actions/upload-artifact@v4
+    #    with:
+    #      name: banana
+    #      path: ./build/
 
       - name: Publish NPM package
         run: npm publish
