--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,10 +24,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          registry-url: 'https://registry.npmjs.org/'
-          node-version-file: '.nvmrc'
-          cache: 'npm'
+#        with:
+#          registry-url: 'https://registry.npmjs.org/'
+#          node-version-file: '.nvmrc'
+#          cache: 'npm'
 
       - name: Install npm packages
         run: npm install
