--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": {
     "name": "Jim Manton"
   },
-  "version": "3.0.46",
+  "version": "3.0.47",
   "bundleDependencies": [],
   "dependencies": {
     "@types/node": "^24.7.1",
@@ -15,6 +15,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "valid-path": "^2.1.0"
+  },
+  "engines": {
+    "node": "22.20.0"
   },
   "scripts": {
     "start": "node app.ts",
