--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,6 +20,6 @@ jobs:
 
       - name: Publish 🚀
         shell: bash
-        run: pnpm publish packages/components --access public --no-git-checks
+        run: npm publish packages/components --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
